Changed the large monitor size to 440x330 so the aspect ratio was correct and a multiple of 4/3. Changed the monitor components to use z-index and absolute positioning instead of relative.

--- a/3_easysec_dressed_up/static/css/monitor.css
+++ b/3_easysec_dressed_up/static/css/monitor.css
@@ -98,7 +98,7 @@ div.monitor
     overflow:hidden;
     float:left;
     clear:none;
-
+    position:relative;
     border-radius:6px;
     border:7px solid #5c5c5c;
 
@@ -138,22 +138,18 @@ div.icon-full
     display:inline-block;
     width:30px;
     height:29px;
-    position:relative;
-    top:-178px;
-    left:151px;
+    position:absolute;
+    right:0px;
+    top: 0px;
     background:transparent url('../images/icon-fullscreen.png') center top no-repeat;
 }
 
 div.icon-full.large
 {
-    top:-373px;
-    left:411px;
 }
 
 div.icon-full.large.play
 {
-    top:-363px;
-    left:411px;
 }
 
 div.icon-play
@@ -161,46 +157,29 @@ div.icon-play
     display:inline-block;
     width:52px;
     height:50px;
-    position:relative;
-    top:-115px;
-    left:35px;
+    position:absolute;
+    top:50%;
+    margin-top: -25px;
+    left:50%;
+    margin-left:-26px;
     background:transparent url('../images/icon-play.png');
 }
 
-div.icon-play.large
-{
-    top:-225px;
-    left:155px;
-}
-
-div.icon-play.large.play
-{
-    top:-215px;
-    left:155px;
-}
 
 div.icon-pause
 {
     display:inline-block;
     width:52px;
     height:50px;
-    position:relative;
-    top:-115px;
-    left:35px;
+    position:absolute;
+    top:50%;
+    margin-top: -25px;
+    left:50%;
+    margin-left:-26px;
     background:transparent url('../images/icon-pause.png');
 }
 
-div.icon-pause.large
-{
-    top:-225px;
-    left:155px;
-}
 
-div.icon-pause.large.play
-{
-    top:-215px;
-    left:155px;
-}
 
 div.icon-full,
 div.icon-play,
@@ -208,6 +187,7 @@ div.icon-pause
 {
     cursor:pointer;
     opacity:0.7;
+    z-index: 3;
 }
 
 div.icon-full:hover,
@@ -237,10 +217,13 @@ div.hidden
 
 .snapshot
 {
-	position:relative;
-	top:-19px;
+	position:absolute;
+	top:0px;
+    left:0px;
     width: 100%;
+    height:100%;
 	margin:0;
+    z-index:2;
 }
 
 .monitor:-webkit-full-screen {
